--- a/index.html
+++ b/index.html
@@ -6,20 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="estruturaGrid">
         <header>
             <div>
-                <img id="img1" src="img/header-banner.png" alt="">
-                <div id="title">
-                    <p>Notify</p>
-                </div>
-                <div id="text1">
-                    <p>A great new free psd theme to showcase your new application.</p>
+                <!-- <img id="img1" src="img/header-banner.png" alt=""> -->
+                <h1 id="title">Notify</h1>
+                <p id="text1">A great new free psd theme to showcase your new application.</p>
+                <div>
+                    <div class="icone">
+                        <img src="img/header-icone-ios.png" alt="">
+                    </div>
+                    <div class="icone">
+                        <img src="img/header-icone-android.png" alt="">
+                    </div>
+                    <div class="icone">
+                        <img src="img/header-icone-windows.png" alt="">
+                    </div>
                 </div>
             </div>
             <div id="img2">
